tests/snapshots/examples_fixtures/type_system__failing__27_adt_wildcard_guard_not_catchall.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/27_adt_wildcard_guard_not_catchall.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E015]: NON-EXHAUSTIVE MATCH

Match is non-exhaustive without an unguarded catch-all arm.

  --> examples/type_system/failing/27_adt_wildcard_guard_not_catchall.flx:9:5
   |
 9 |     match c {
   |     ^^^^^^^^^
10 |         _ if true -> 1,
   | ^^^^^^^^^^^^^^^^^^^^^^^
11 |     }
   | ^^^^^

Hint:
  Add an unguarded `_ -> ...` arm for conservative exhaustive coverage.
== stdout ==
<not executed>
